# Cascade

./: .gitignore  CONTRIBUTING.md  README.md  content.md  metadata.json  pyproject.toml
snapshot/: .gitignore  README.md  a.py  firefly_log_1766230535.jsonl  firefly_log_1766230809.jsonl  fix_imports.py  mkdocs.yml  profile.out  profile_graph_5000.html  profile_heavy_1000.prof  profile_simple_1000.prof  pyproject.toml
snapshot/.github/workflows/: ci.yml
snapshot/archive/observatory/debug/: debug_02_single_agent.py
snapshot/cicd/: README.md  __init__.py  main.py  tasks.py  workflows.py
snapshot/cicd/tests/: test_tasks.py
snapshot/docs/: index.md
snapshot/docs/concepts/: control_vs_data_flow.md  philosophy.md  philosophy.zh.md
snapshot/docs/how-to-guides/: advanced-workflows.md  defining-computations.en.md  defining-computations.md  dependency-injection.md  improving-robustness.md  using-providers.en.md  using-providers.md
snapshot/docs/reference/: api.md  cli-tools.md
snapshot/docs/tutorial/: getting-started.md
snapshot/examples/: visualize_explicit_jumps.py
snapshot/observatory/: __init__.py
snapshot/observatory/agents/: __init__.py  kuramoto.py
snapshot/observatory/benchmarks/: tco_performance.py
snapshot/observatory/debug/: debug_02_single_agent.py
snapshot/observatory/experiments/: __init__.py  run_fireflies.py
snapshot/observatory/monitors/: __init__.py  aggregator.py  convergence.py  logger.py
snapshot/observatory/networking/: direct_channel.py  ipc.py
snapshot/observatory/protoplasm/agents/: conway.py
snapshot/observatory/protoplasm/governance/: bottleneck_sim.py
snapshot/observatory/protoplasm/networking/: direct_channel.py  proto_direct_connect.py
snapshot/observatory/protoplasm/physics/: jitter_meter.py  recursion_test.py
snapshot/observatory/protoplasm/renderer/: palette.py  stress_test.py  unigrid.py  visualizer_proto.py  wave_test.py
snapshot/observatory/protoplasm/truth/: golden_ca.py  renderer.py  run_conway_experiment.py  test_renderer.py  truth_visualizer_demo.py  ui.py  validator.py
snapshot/observatory/scripts/: debug_headless_throughput.py  debug_renderer_throughput.py  profile_entry.py
snapshot/observatory/visualization/: __init__.py  app.py  driver.py  grid.py  grid_renderer.py  matrix.py  palette.py  raw_app.py
snapshot/scripts/: fix_spec_structure.py  fix_test_failures.py  generate_stubs.py  profile_entry.py  recover_and_move_spec.py  refactor_move_spec.py  refactor_node_ids.py
snapshot/src/cascade/: __init__.py  stdlib.py  testing.py
snapshot/src/cascade/graph/: build.py  model.py  serialize.py
snapshot/src/cascade/internal/: inputs.py
snapshot/src/cascade/messaging/: bus.py  renderer.py
snapshot/src/cascade/providers/: __init__.py  config.py  file.py  http.py  shell.py  stdio.py  subflow.py  template.py
snapshot/src/cascade/runtime/: __init__.py  bus.py  engine.py  events.py  exceptions.py  flow.py  protocols.py  resolvers.py  subscribers.py
snapshot/src/cascade/spec/: common.py  file.py  lazy_types.py  resource.py  routing.py  task.py
snapshot/src/cascade/tools/: __init__.py  cli.py  events.py  preview.py  visualize.py
snapshot/tests/: conftest.py  test_adapters.py  test_core_mvp.py  test_di_and_resources.py  test_end_to_end.py  test_http.py  test_map.py  test_retry.py  test_spec_async.py  test_sql.py  test_tools.py
snapshot/tests/adapters/executors/: test_local.py
snapshot/tests/adapters/solvers/: test_csp.py  test_native.py
snapshot/tests/application/: test_app_tools.py
snapshot/tests/cascade-py/integration/: test_state_backends.py
snapshot/tests/cascade-py/providers/: test_helpers.py  test_io.py  test_ipfs.py
snapshot/tests/cascade-runtime/e2e/: harness.py  test_e2e_cli_integration.py  test_harness_connector.py
snapshot/tests/cascade-runtime/graph/: test_build.py  test_compiler.py  test_hashing.py
snapshot/tests/cascade-runtime/integration/: test_engine_vm_integration.py
snapshot/tests/cascade-runtime/runtime/: test_engine_concurrency.py  test_engine_constraints.py  test_engine_core.py  test_flow_manager.py  test_vm.py  test_vm_integration.py  test_vm_mutual.py
snapshot/tests/cicd/: test_tasks.py
snapshot/tests/cli/: test_cli.py
snapshot/tests/cli-controller/: test_controller_app.py  test_controller_cli.py
snapshot/tests/cli-observer/: test_app.py  test_telemetry_contract.py
snapshot/tests/cli/e2e/: test_e2e_cli_local_backend.py  test_e2e_cli_sqlite_backend.py  test_e2e_watch_local_backend.py
snapshot/tests/common/: test_messaging.py
snapshot/tests/connector-local/: test_local.py
snapshot/tests/connector-mqtt/: conftest.py  test_connector.py
snapshot/tests/core/: test_purity_model.py
snapshot/tests/e2e/integration/: test_plan_caching.py
snapshot/tests/e2e/runtime/: conftest.py  harness.py  test_e2e_cli_integration.py  test_e2e_concurrency_control.py  test_e2e_rate_limit_control.py  test_e2e_robustness.py  test_e2e_runtime_control_updates.py  test_e2e_ttl.py  test_tco_param_override.py
snapshot/tests/engine/e2e/: harness.py  test_e2e_concurrency_control.py  test_e2e_control_plane.py  test_e2e_local_connector.py  test_e2e_rate_limit_control.py  test_e2e_robustness.py  test_e2e_sqlite_connector.py  test_executor_modes.py  (+2 more)
snapshot/tests/examples/: test_llm_pattern.py
snapshot/tests/graph/: test_build.py  test_serialize.py
snapshot/tests/integration/: test_core_mvp.py  test_end_to_end.py  test_resource_scheduling.py  test_router_pruning.py
snapshot/tests/providers/: test_config.py  test_file.py  test_http.py  test_io.py  test_s3.py  test_sql.py  test_stdio.py
snapshot/tests/runtime/: test_bus.py  test_control_flow.py  test_engine_core.py  test_event_bus.py  test_flow_manager.py  test_input_execution.py  test_map_policies.py  test_map_reduce_integration.py  test_renderers.py  test_retry.py  test_router_pruning.py
snapshot/tests/spec/: test_common.py  test_constraint.py  test_resource.py  test_task.py
snapshot/tests/sys/: test_cli_control_idempotency.py
snapshot/tests/tools/: test_cli.py  test_preview.py  test_visualize.py
(+304 files in other folders)
