[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cascade"
version = "0.1.0"
description = "A modern, declarative automation library for Python."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "cascade-interfaces",
    "cascade-runtime",
    "cascade-py",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
cascade-interfaces = { workspace = true }
cascade-runtime = { workspace = true }
cascade-py = { workspace = true }
cascade-provider-ipfs = { workspace = true }
cascade-cli-controller = { workspace = true }
cascade-cli-observer = { workspace = true }
cascade-connector-mqtt = { workspace = true }

[tool.hatch.workspaces]
packages = [
    "packages/cascade-interfaces",
    "packages/cascade-runtime",
    "packages/cascade-py",
    "packages/cascade-provider-ipfs",
]

[tool.hatch.build.targets.wheel]
packages = ["packages/cascade-py/src/cascade"]

[tool.pytest.ini_options]
addopts = "-ra --cov=cascade --cov-report=term-missing"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-aiohttp",
  "pytest-mock",
  "moto[s3]",
  "typer",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  # Consolidated testing dependencies
  "redis",
  "aiobotocore",
  "sqlalchemy",
  "PyYAML",
  "jinja2",
  "aiohttp",
  "python-constraint",
  "flask_cors",
  # Local workspace packages needed for testing
  "cascade-provider-ipfs",
  "cascade-cli-controller",
  "cascade-cli-observer",
  "cascade-connector-mqtt",
]

[tool.hatch.metadata]
allow-direct-references = true
