[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cascade"
version = "0.1.0"
description = "A modern, declarative automation library for Python."
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
dependencies = [
    "cascade-spec",
    "cascade-engine",
    "cascade-sdk",
    "cascade-graph",
    "cascade-library",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
cascade-spec = { workspace = true }
cascade-engine = { workspace = true }
cascade-sdk = { workspace = true }
cascade-graph = { workspace = true }
cascade-library = { workspace = true }
cascade-provider-ipfs = { workspace = true }
cascade-cli-controller = { workspace = true }
cascade-cli-observer = { workspace = true }
cascade-connector-mqtt = { workspace = true }
cascade-connector-sqlite = { workspace = true }

[tool.hatch.workspaces]
packages = [
    "packages/cascade-spec",
    "packages/cascade-engine",
    "packages/cascade-sdk",
    "packages/cascade-provider-ipfs",
    "packages/cascade-graph",
    "packages/cascade-library",
    "packages/cascade-connector-sqlite",
]

[tool.hatch.build.targets.wheel]
packages = ["packages/cascade-sdk/src/cascade"]

[tool.pytest.ini_options]
addopts = "-ra --cov=cascade --cov-report=term-missing"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-aiohttp",
  "pytest-mock",
  "moto[s3]",
  "typer",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  # Consolidated testing dependencies
  "redis",
  "aiobotocore",
  "sqlalchemy",
  "PyYAML",
  "jinja2",
  "aiohttp",
  "python-constraint",
  "flask_cors",
  # Local workspace packages needed for testing
  "cascade-provider-ipfs",
  "cascade-cli-controller",
  "cascade-cli-observer",
  "cascade-connector-mqtt",
  "cascade-connector-sqlite",
]

[tool.hatch.metadata]
allow-direct-references = true
